# WT-ht-condor-front-end

./: .gitignore  .gitmodules  Dockerfile  Dockerfile.testing  Makefile  README.md  pyproject.toml  register.py  requirements.txt  run_local.sh  supervisor-apache.conf  testing.Dockerfile  wsgi.py
.github/scripts/: create-documentation-release.py
.github/workflows/: build-sw-container.yml  publish-container-manual.yml  publish-container-to-harbor.yml  publish-container.yml  release-documentation-update.yml
examples/: Dockerfile  apache-template.conf  apache.conf  config.py  humans.ini
portal/: __main__.py  app.py  exceptions.py  template_filters.py
portal/api/: __init__.py  freshdesk.py
portal/static/: base.css
portal/static/css/: main.css
portal/static/js/: util.js
portal/static/scss/: main.scss
portal/templates/: 404.html  base.html
portal/website/: util.py  views.py
portal/website/static/: index.css
portal/website/templates/: application.html  credit-request.html  index.html
registry/: __main__.py  app.py  context_processors.py  mail.py  sources.py  template_filters.py
registry/account/: __init__.py  views.py
registry/account/templates/: account.html
registry/api/: freshdesk.py  main.py
registry/ca/: __init__.py  views.py
registry/code/: __init__.py  code.py  views.py
registry/connect/: __init__.py  views.py
registry/index/: views.py
registry/signup/: __init__.py  signup.py  views.py
registry/static/: base.css  copy.js
registry/templates/: base.html
registry/token/: __init__.py  views.py
registry/website/: __init__.py
(+41 files in other folders)
