[tool.poetry]
name = "path-portal"
version = "0.1.0"
description = "from UC san diego. Front end for htcondor submit"
authors = ["Alexander Hermann <ahb@woodthilsted.com>"]
readme = "README.md"
packages = [{include = "portal"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
cryptography = "^40.0.2"
flask-assets = "^2.0"
libsass = "^0.22.0"
python-dotenv = "^1.0.0"
requests = "^2.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  ".",
  "../BI-create-dashboard-tables"
]